# frdm-fan-controller-software

./: CMakeLists.txt  main.cpp
